--- a/client/public/index.html
+++ b/client/public/index.html
@@ -60,7 +60,7 @@
       }
     })(window.location);
   </script>
-  <title>React App</title>
+  <title>BCH ALS Audio Editor</title>
 </head>
 
 <body>
