--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/BCHIcon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -60,7 +60,7 @@
       }
     })(window.location);
   </script>
-  <title>ALS Message Editing</title>
+  <title>React App</title>
 </head>
 
 <body>
